# oniriTunnel-build-terminal

./: .dockerignore  .env  .env copy.example  .gitignore  DOCKER.md  Dockerfile  README-DOCKERHUB.md  README.docker.md  README.md  docker-compose.hub-host.yml  docker-compose.hub.yml  docker-compose.yml  docker-entrypoint.sh  index.js  package-lock.json  package.json
.github/workflows/: prebuild.yml
appling/: CMakeLists.txt  package.json
scripts/: package.js
services/oniri-core/: package-lock copy.json  package-lock.json  package.json
services/oniri-core/src/: api.js  app.js  rpc.js
services/oniri-core/src/logger/: index.js
services/oniri-core/src/oniri-client/: index.js
services/oniri-core/src/oniri-client/lib/: allowedStore.js  constants.js  oniriBase.js  oniriClient.js  oniriServer.js  servicesManager.js  tunedUDX.js  utils.js
services/oniri-core/src/oniri-client/lib/jsonfile/: index.js  utils.js
services/oniri-core/src/oniri-client/lib/serviceClients/: MEMORY_LIMITATION.md  client.js  clientRpc.js  clientUdp.js  helper.js  libNet copy 2.js  libNet copy 3.js  libNet copy.js  libNet.js  server.js  serverRpc.js  serverUdp.js
services/oniri-core/src/oniri-client/lib/tests/: RPC_REVIEW.md  TCP_REVIEW.md  TEST_SUMMARY.md  UDP_TESTING_GUIDE.md  libNet.test.js  memory_leak_test.js  oniriClient.js  oniriClientRpc.js  oniriClientUdp.js  oniriServer.js  oniriServerRpc.js  oniriServerUdp.js  (+17 more)
services/oniri-core/src/oniriService/: encKey.js  oniriClient.js  oniriService.js
src/: builtins.json  client.js  index copy 2.js  index copy 3.js  index copy.js  server.js  startIpc.js
test/: testSpawn.js
(+2 files in other folders)
